# semantic_to_sql

./: .gitignore  README.md  app.py  data.py  pyproject.toml  query_builder.py  run_sql.py
