[tool.poetry]
name = "semantic-to-sql"
version = "0.1.0"
description = ""
authors = ["Prashant Patel <prashant.patel@gmx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-bigquery = "^3.27.0"
tabulate = "^0.9.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
